...

    <string name="phone_title_text">Phone Number</string>
    <string name="sign_in">Sign In</string>

    <string name="title_social">Social</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_programs">Programs</string>
    <string name="title_exercises">Exercises</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="email">Email address</string>
    <string name="password">Password</string>
...
    <string name="activity_profile" />
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="register">Register!</string>
    <string name="login">Login</string>
    <string name="login_prompt">Login?</string>
    <string name="register_prompt">Register</string>
    <string name="authentication_failed">Auth Failed</string>
    <string name="auth_failure">Auth Failed</string>
    <string name="logout">Logout</string>
    <string name="clear">Clear</string>
...
    <string name="reps">Reps</string>
    <string name="home_reps">Reps:</string>
    <string name="comments">Comments</string>
    <string name="current_program">Current Program</string>
    <string name="current_program1">Current Program:</string>
    <string name="exercises">Exercises</string>
    <string name="add_program">Add Program</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="remove_exercise">Remove Exercise</string>
    <string name="remove_program">Remove Program</string>
    <string name="select_program">Select Program</string>
    <string name="log">Log</string>
    <string name="of_10_lb_plates"># of 10 lb plates</string>
    <string name="of_25_lb_plates"># of 25 lb plates</string>
...
